--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-04-07  Jesus Arias Fisteus <jaf@it.uc3m.es>
+
+	* html2xhtml Released version 1.1.2-2
+	* html2xhtml Bugfix related to the use of vsnprintf
+
 2009-11-05  Jesus Arias Fisteus <jaf@it.uc3m.es>
 
 	* html2xhtml Released as stable, version 1.1.2
